fix mobile horizontal overflow

--- a/main.css
+++ b/main.css
@@ -264,6 +264,8 @@ footer { background-color: #426CB4;}
     justify-content: center;
     align-items: center;
 }
+.hero img { width: 100%; }
+
 .offers{
     display: flex;
     flex-flow: row wrap;
